# git-ai

./: LICENSE  README.md  build_all.sh  pyproject.toml  requirements.txt  setup.py
git_ai/cmd/: __init__.py  constants.py  diff.py  error.py  init.py  input_repo.py  log.py  merge_exp.py
git_ai/cmd/ai_repo/: __init__.py  ai_repo.py  ai_repo_config.py  ai_repo_log.py  credentials.py
git_ai/errors/: __init__.py  errors.py
git_ai/main/: main.py
git_ai/metrics/: experiment.py  writer.py
git_ai/pygitutils/: __init__.py  pygitutils.py
git_ai/test/: test_ai_repo.py
git_ai/test/topologies/: cnn.1  cnn.2  cnn.3  cnn.4
git_ai/test/utils/: ai_repo_read.py  data_gen.py  interuptable_test.py  setup_repo.py  testutils.py
git_ai/utils/: __init__.py  utils.py
